fixed form input spacing

--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -24,3 +24,7 @@
 ul {
   list-style-type: none;
 }
+
+input {
+  margin: 5px;
+}
