--- a/friends/src/index.css
+++ b/friends/src/index.css
@@ -1,4 +1,5 @@
 body {
+  text-align: center;
   background-image: url('https://cdn0.iconfinder.com/data/icons/network-data-security/49/slice440-512.png');
   background-repeat: no-repeat;
   background-position: center;
